--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/freetype"]
 	path = external/freetype
 	url = git@github.com:freetype/freetype.git
+[submodule "external/opencv"]
+	path = external/opencv
+	url = git@github.com:opencv/opencv.git
