sloppy and slow png saving working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,13 @@ include_directories(include ${OpenCV_INCLUDE_DIRS})
 
 ## create executables and link
 set(SOURCES src/main.cpp 
-            src/glad.c 
+            src/glad.c
+	    src/image_proc.cpp 
             include/shader.h
             include/glad/glad.h
             include/KHR/khrplatform.h
             include/stb_image_write.h
+	    include/image_proc.h
             )
             
 add_executable(${PROJECT_NAME}
