adding load font to splash, close???

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,20 +13,22 @@ add_subdirectory(external)
 include_directories(include ui ${OpenCV_INCLUDE_DIRS})
 
 ## create executables and link
-set(SOURCES src/glad.c
+set(SOURCES src/main.cpp 
+	    src/glad.c
 	    src/image_proc.cpp 
+	    src/font_loader.cpp
+	    src/main_window.cpp
 	    src/circular_progress.cpp
-	    src/ui_main.cpp
             include/shader.h
             include/glad/glad.h
             include/KHR/khrplatform.h
             include/stb_image_write.h
 	    include/image_proc.h
+	    include/font_loader.h
 	    include/circular_progress.h
-	    src/main_window.h
-	    src/main_window.cpp
-	    src/ui_typewriter.h
-	    src/ui_splash_screen.h
+	    ui/main_window.h
+	    ui/ui_typewriter.h
+	    ui/ui_splash_screen.h
             )
 
 add_executable(${PROJECT_NAME}
